[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["DTufto <darrelltufto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
elasticsearch = "^8.15.1"
scikit-learn = "^1.5.2"
numpy = "^2.1.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
